--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
     <div class="about-content">
       <h2>Our Story</h2>
       <p>
-        Crown was born from a passion for design and a dedication to quality. 
-        We believe in pushing boundaries and creating iconic pieces that stand 
-        the test of time. Every product we craft is a reflection of our commitment 
-        to excellence and innovation.
+        This cap is designed by a passionate female entrepreneur 
+        with a mission to give back. Growing up, I faced a difficult 
+        childhood and promised myself I’d help children who lack support,
+        so 5% of every sale is donated to kids in need. My journey 
+        also inspired me to support pets, after seeing many unable to 
+        afford care for their furry friends while my own pet was in the hospital. 
+        Another 5% of proceeds goes toward helping pets get the treatment they deserve. 
+        By purchasing this cap, you’re not just buying a product—you’re supporting a 
+        cause to create a brighter future for kids and pets alike.
       </p>
     </div>
   </section>
