--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <label for="name">Name</label>
       <input id="name" type="text" placeholder="Your Name" required/>
       <label for="email">Email</label>
-      <input id="email" type="email" placeholder="crown.2025.w@gmail.com" required/>
+      <input id="email" type="email" placeholder="Your email" required/>
       <label for="message">Message</label>
       <textarea id="message" placeholder="Write your message..." required></textarea>
       <button type="submit">Send Message</button>
