--- a/index.html
+++ b/index.html
@@ -70,20 +70,18 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact-section">
-    <h2>Contact Us</h2>
-    <p>Got questions or want to learn more? Drop us a message below.</p>
-    <form class="contact-form">
-      <label for="name">Name</label>
-      <input id="name" type="text" placeholder="Your Name" required/>
-      <label for="email">Email</label>
-      <input id="email" type="email" placeholder="Your email" required/>
-      <label for="message">Message</label>
-      <textarea id="message" placeholder="Write your message..." required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+ <!-- Contact Section -->
+<section id="contact" class="contact-section">
+  <h2>Contact Us</h2>
+  <p>Got questions or want to learn more? Drop us a message below.</p>
+  
+  <!-- Email Us Button -->
+  <p>
+    <a href="mailto:xxxxx@gmail.com" class="email-button">Email Us</a>
+  </p>
+</section>
+
+
 
   <!-- Footer -->
   <footer class="site-footer">
