--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crown</title>
+  <title>Crown ♕</title>
   <link rel="stylesheet" href="styles.css"/>
   <!-- Favicon (optional) -->
   <!-- <link rel="icon" href="path/to/favicon.ico" type="image/x-icon"> -->
@@ -11,7 +11,7 @@
 <body>
   <!-- Header / Navigation -->
   <header class="site-header">
-    <div class="logo">Crown</div>
+    <div class="logo">Crown ♕ </div>
     <nav class="nav-links">
       <a href="#home">Home</a>
       <a href="#about">About</a>
