add envelop icon

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
   <!-- Email Us Button -->
   <p>
-    <a href="mailto:xxxxx@gmail.com" class="email-button">Email Us</a>
+    <a href="mailto:xxxxx@gmail.com" class="email-button">Email Us ✉️</a>
   </p>
 </section>
 
