change the this cap to crown in story

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="about-content">
       <h2>Our Story</h2>
       <p>
-        This cap is designed by a passionate female entrepreneur 
+        crown designed by a passionate female entrepreneur 
         with a mission to give back. Growing up, I faced a difficult 
         childhood and promised myself I’d help children who lack support,
         so 5% of every sale is donated to kids in need. My journey 
