change this cap to crown

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         also inspired me to support pets, after seeing many unable to 
         afford care for their furry friends while my own pet was in the hospital. 
         Another 5% of proceeds goes toward helping pets get the treatment they deserve. 
-        By purchasing this cap, you’re not just buying a product—you’re supporting a 
+        By purchasing crown, you’re not just buying a product—you’re supporting a 
         cause to create a brighter future for kids and pets alike.
       </p>
     </div>
